Remove ISpacesProps and fix z-index issue

--- a/components/experimental/spaces/src/spacesToolbarStyle.css
+++ b/components/experimental/spaces/src/spacesToolbarStyle.css
@@ -3,6 +3,7 @@
     height: 45px;
     margin: 10px;
     display: flex;
+    z-index: 1000;
 }
 
 .spaces-toolbar-tool {
